--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,14 @@
       <meta property="og:url" content="https://covinet.live">
       <meta property="og:title" content="Covinet - centralised hospital data ">
       <meta property="og:description" content="During this pandemic, it was noticed that the authentic information was present in a scattered manner without a centralized database for the same. Hence, this website aims to present this data in a readily-accessible manner for the user’s convenient perusal.">
-      <meta property="og:image" content="./og_img.png">
+      <meta property="og:image" content="%PUBLIC_URL%/og_img.png">
 
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:url" content="https://covinet.live">
       <meta property="twitter:title" content="Covinet - centralised hospital data ">
       <meta property="twitter:description" content="During this pandemic, it was noticed that the authentic information was present in a scattered manner without a centralized database for the same. Hence, this website aims to present this data in a readily-accessible manner for the user’s convenient perusal.">
-      <meta property="twitter:image" content="./og_img.png">
+      <meta property="twitter:image" content="%PUBLIC_URL%/og_img.png">
 
 
 
