--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <!-- meta tags for different platforms  -->
 
       <!-- Primary Meta Tags -->
-      <title>Covinet - centralised hospital data </title>
+      <title>COVINET - CENTRALIZED HOSPITAL DATA </title>
       <meta name="title" content="Covinet - centralised hospital data ">
       <meta name="description" content="During this pandemic, it was noticed that the authentic information was present in a scattered manner without a centralized database for the same. Hence, this website aims to present this data in a readily-accessible manner for the user’s convenient perusal.">
 
