--- a/public/index.html
+++ b/public/index.html
@@ -4,24 +4,24 @@
     
     <!-- service_worker here-->
       <script >
-          function getCookie(name) {
-            const value = `; ${document.cookie}`;
-            const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-          }
-          // console.log(getCookie('signedIn')==='true')
+          // function getCookie(name) {
+          //   const value = `; ${document.cookie}`;
+          //   const parts = value.split(`; ${name}=`);
+          //   if (parts.length === 2) return parts.pop().split(';').shift();
+          // }
+          // // console.log(getCookie('signedIn')==='true')
 
-          if(getCookie('signedIn')==='true'){
-            if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('./service-worker.js', {scope: '/'})
-                .then(function(registration) {
-                  console.log('Registration successful, scope is:', registration.scope);
-                })
-                .catch(function(error) {
-                  console.log('Service worker registration failed, error:', error);
-                });
-            }
-          }
+          // if(getCookie('signedIn')==='true'){
+          //   if ('serviceWorker' in navigator) {
+          //       navigator.serviceWorker.register('./service-worker.js', {scope: '/'})
+          //       .then(function(registration) {
+          //         console.log('Registration successful, scope is:', registration.scope);
+          //       })
+          //       .catch(function(error) {
+          //         console.log('Service worker registration failed, error:', error);
+          //       });
+          //   }
+          // }
       </script>
       <!-- <script src="service-worker.js"></script> -->
         
